syntax = "proto3";
import "subs/_MarketCollectionTitle.proto";
import "subs/_MarketCollectionAction.proto";
import "subs/_MarketCollectionBanner.proto";
import "_MarketTokenMeta.proto";
import "subs/_MarketCollectionFilter.proto";

message _MarketCollectionItem {
  optional string entryTitle = 1;
  optional _MarketCollectionTitle title = 2;
  optional _MarketCollectionTitle description = 3;
  optional _MarketCollectionTitle shortTitle = 4;
  optional _MarketCollectionTitle shortDescription = 5;
  optional _MarketCollectionAction action = 6;
  optional string theme = 7;
  optional _MarketCollectionBanner banner = 8;
  repeated _MarketTokenMeta tokens = 9;
  repeated _MarketCollectionFilter filters = 10;
}
